--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
+    "randombytes": "^2.1.0",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.5.2"
   }
