--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-list-endpoints": "^6.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.0.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
